fixed problems with jackson demo